--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="min-h-screen bg-[radial-gradient(circle_at_center,_white_1%,_#94a3b8,_#0f172a)]">
   <app-root></app-root>
 </body>
 </html>
